PCS BAckup 26Dec2023/Backup-Source/objects/Rx_Compliance_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Awarded_Position__c</fullName>
        <label>Awarded Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Item_No__c</fullName>
        <label>Billing Item No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Awarded_Position__c</fullName>
        <label>DIrect Awarded Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Title__c</fullName>
        <formula>&quot;Price Effective Date:&quot;&amp;  TEXT( Vision_Direct_Price_Effective_Date__c ) &amp;&quot;, Current Price:&quot;&amp;  TEXT( Vision_Direct_Awarded_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Awarded_Position__c</fullName>
        <label>Indirect Awarded Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indirect_Title__c</fullName>
        <formula>&quot;Price Effective Date:&quot;&amp; TEXT( Vision_Indirect_Price_Effective_Date__c ) &amp;&quot;, Current Price:&quot;&amp; TEXT( Vision_Indirect_Awarded_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Initial_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Initial Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Avg_Net_Dollar__c</fullName>
        <formula>(IF(ISNULL(M4_Direct_Net_Dollar__c ),0,M4_Direct_Net_Dollar__c) +IF(ISNULL(M3_Direct_Net_Dollar__c ),0,M3_Direct_Net_Dollar__c ) + IF(ISNULL(M2_Direct_Net_Dollar__c ),0,M2_Direct_Net_Dollar__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Avg Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Avg_Qty_Compliance__c</fullName>
        <formula>If(M1_Direct_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M1_Direct_Quantity__c) ,ISNULL(M1_Direct_Avg_Quantity__c)) , 0,(M1_Direct_Quantity__c/M1_Direct_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M4_Direct_Quantity__c),0,M4_Direct_Quantity__c)+IF(ISNULL(M3_Direct_Quantity__c),0,M3_Direct_Quantity__c) + IF(ISNULL(M2_Direct_Quantity__c),0,M2_Direct_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Avg_Value_Compliance__c</fullName>
        <formula>If(M1_Indirect_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M1_Indirect_Quantity__c) ,ISNULL(M1_Indirect_Avg_Quantity__c)) , 0,(M1_Indirect_Quantity__c/M1_Indirect_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Avg Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Compliance__c</fullName>
        <formula>If(Vision_Direct_Awarded_Qty_Monthly__c = 0,0,IF( AND( ISNULL(M1_Direct_Quantity__c) ,ISNULL(Vision_Direct_Awarded_Qty_Monthly__c)) , 0,(M1_Direct_Quantity__c/Vision_Direct_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Net_Dollar__c</fullName>
        <label>M1 Direct Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Quantity__c</fullName>
        <label>M1 Direct Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Direct_Value_Compliance__c</fullName>
        <formula>If(Vision_Direct_Awarded_Value_Monthly__c = 0,0,IF( AND( ISNULL(M1_Direct_Net_Dollar__c) ,ISNULL(Vision_Direct_Awarded_Qty_Monthly__c)) , 0,(M1_Direct_Net_Dollar__c/Vision_Direct_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Direct Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Avg_Net_Dollar__c</fullName>
        <formula>(IF(ISNULL(M4_Indirect_Net_Dollar__c ),0,M4_Indirect_Net_Dollar__c) +IF(ISNULL(M3_Indirect_Net_Dollar__c ),0,M3_Indirect_Net_Dollar__c ) + IF(ISNULL(M2_Indirect_Net_Dollar__c ),0,M2_Indirect_Net_Dollar__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Avg Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Avg_Qty_Compliance__c</fullName>
        <formula>If(M1_Indirect_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M1_Indirect_Quantity__c) ,ISNULL(M1_Indirect_Avg_Quantity__c)) , 0,(M1_Indirect_Quantity__c/M1_Indirect_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c)+IF(ISNULL(M3_Indirect_Quantity__c),0,M3_Indirect_Quantity__c) + IF(ISNULL(M2_Indirect_Quantity__c),0,M2_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Avg_Value_Compliance__c</fullName>
        <formula>If(M1_Indirect_Avg_Net_Dollar__c= 0,0,IF( AND( ISNULL(M1_Indirect_Net_Dollar__c) ,ISNULL(M1_Indirect_Avg_Net_Dollar__c)) , 0,(M1_Indirect_Net_Dollar__c/M1_Indirect_Avg_Net_Dollar__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Avg Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Compliance__c</fullName>
        <formula>If(Vision_Indirect_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M1_Indirect_Quantity__c) ,ISNULL(Vision_Indirect_Awarded_Qty_Monthly__c)) , 0,(M1_Indirect_Quantity__c/Vision_Indirect_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Net_Dollar__c</fullName>
        <label>M1 Indirect Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Quantity__c</fullName>
        <label>M1 Indirect Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Quantity_in_Units__c</fullName>
        <label>M1 Indirect Quantity in Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Indirect_Value_Compliance__c</fullName>
        <formula>If(Vision_Indirect_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M1_Indirect_Net_Dollar__c) ,ISNULL(Vision_Indirect_Awarded_Value_Monthly__c)) , 0,(M1_Indirect_Net_Dollar__c/Vision_Indirect_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Indirect Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Quantity_in_Units__c</fullName>
        <label>M1 Quantity in Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Avg_Qty_Compliance__c</fullName>
        <formula>If(M1_Total_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M1_Total_Quantity__c) ,ISNULL(M1_Total_Avg_Quantity__c)) , 0,(M1_Total_Quantity__c/M1_Total_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Avg_Quantity__c</fullName>
        <formula>M1_Direct_Avg_Quantity__c + M1_Indirect_Avg_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Avg_Sales_Compliance__c</fullName>
        <formula>If(M1_Total_Avg_Sales__c= 0,0,IF( AND( ISNULL(M1_Total_Net_Dollar__c) ,ISNULL(M1_Total_Avg_Sales__c)) , 0,(M1_Total_Net_Dollar__c/M1_Total_Avg_Sales__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Avg Sales Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Avg_Sales__c</fullName>
        <formula>M1_Direct_Avg_Net_Dollar__c+M1_Indirect_Avg_Net_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Avg Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Compliance__c</fullName>
        <formula>If(Vision_Total_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M1_Total_Quantity__c ) ,ISNULL(Vision_Total_Awarded_Qty_Monthly__c)) , 0,(M1_Total_Quantity__c /Vision_Total_Awarded_Qty_Monthly__c)*100))</formula>
        <label>M1 Total Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Net_Dollar__c</fullName>
        <formula>M1_Direct_Net_Dollar__c + M1_Indirect_Net_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Total_Quantity__c</fullName>
        <formula>M1_Direct_Quantity__c + M1_Indirect_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Total_Value_Compliance__c</fullName>
        <formula>If(Vision_Total_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M1_Total_Net_Dollar__c ) ,ISNULL(Vision_Total_Awarded_Value_Monthly__c)) , 0,(M1_Total_Net_Dollar__c /Vision_Total_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Total Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Avg_Net_Dollar__c</fullName>
        <formula>(IF(ISNULL(M5_Direct_Net_Dollar__c ),0,M5_Direct_Net_Dollar__c) +IF(ISNULL(M4_Direct_Net_Dollar__c ),0,M4_Direct_Net_Dollar__c ) + IF(ISNULL(M3_Direct_Net_Dollar__c ),0,M3_Direct_Net_Dollar__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Avg Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Avg_Qty_Compliance__c</fullName>
        <formula>If(M2_Direct_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M2_Direct_Quantity__c) ,ISNULL(M2_Direct_Avg_Quantity__c)) , 0,(M2_Direct_Quantity__c/M2_Direct_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M5_Direct_Quantity__c),0,M5_Direct_Quantity__c)+IF(ISNULL(M4_Direct_Quantity__c),0,M4_Direct_Quantity__c) + IF(ISNULL(M3_Direct_Quantity__c),0,M3_Direct_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Avg_Value_Compliance__c</fullName>
        <formula>If(M2_Indirect_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M2_Indirect_Quantity__c) ,ISNULL(M2_Indirect_Avg_Quantity__c)) , 0,(M2_Indirect_Quantity__c/M2_Indirect_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Avg Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Compliance__c</fullName>
        <formula>If(Vision_Direct_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M2_Direct_Quantity__c) ,ISNULL(Vision_Direct_Awarded_Qty_Monthly__c)) , 0,(M2_Direct_Quantity__c/Vision_Direct_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Net_Dollar__c</fullName>
        <label>M2 Direct Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Quantity__c</fullName>
        <label>M2 Direct Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Direct_Value_Compliance__c</fullName>
        <formula>If(Vision_Direct_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M2_Direct_Net_Dollar__c) ,ISNULL(Vision_Direct_Awarded_Value_Monthly__c)) , 0,(M2_Direct_Net_Dollar__c/Vision_Direct_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Direct Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Avg_Net_Dollar__c</fullName>
        <formula>(IF(ISNULL(M5_Indirect_Net_Dollar__c ),0,M5_Indirect_Net_Dollar__c) +IF(ISNULL(M4_Indirect_Net_Dollar__c ),0,M4_Indirect_Net_Dollar__c ) + IF(ISNULL(M3_Indirect_Net_Dollar__c ),0,M3_Indirect_Net_Dollar__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Avg Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Avg_Qty_Compliance__c</fullName>
        <formula>If(M2_Indirect_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M2_Indirect_Quantity__c) ,ISNULL(M2_Indirect_Avg_Quantity__c)) , 0,(M2_Indirect_Quantity__c/M2_Indirect_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M5_Indirect_Quantity__c),0,M5_Indirect_Quantity__c)+IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c) + IF(ISNULL(M3_Indirect_Quantity__c),0,M3_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Avg_Value_Compliance__c</fullName>
        <formula>If(M2_Indirect_Avg_Net_Dollar__c= 0,0,IF( AND( ISNULL(M2_Indirect_Net_Dollar__c) ,ISNULL(M2_Indirect_Avg_Net_Dollar__c)) , 0,(M2_Indirect_Net_Dollar__c/M2_Indirect_Avg_Net_Dollar__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Avg Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Compliance__c</fullName>
        <formula>If(Vision_Indirect_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M2_Indirect_Quantity__c) ,ISNULL(Vision_Indirect_Awarded_Qty_Monthly__c)) , 0,(M2_Indirect_Quantity__c/Vision_Indirect_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Net_Dollar__c</fullName>
        <label>M2 Indirect Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Quantity__c</fullName>
        <label>M2 Indirect Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Quantity_in_Units__c</fullName>
        <label>M2 Indirect Quantity in Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Indirect_Value_Compliance__c</fullName>
        <formula>If(Vision_Indirect_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M2_Indirect_Net_Dollar__c) ,ISNULL(Vision_Indirect_Awarded_Value_Monthly__c)) , 0,(M2_Indirect_Net_Dollar__c/Vision_Indirect_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Indirect Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Quantity_in_Units__c</fullName>
        <label>M2 Quantity in Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Avg_Qty_Compliance__c</fullName>
        <formula>If(M2_Total_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M2_Total_Quantity__c) ,ISNULL(M2_Total_Avg_Quantity__c)) , 0,(M2_Total_Quantity__c/M2_Total_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Avg_Quantity__c</fullName>
        <formula>M2_Direct_Avg_Quantity__c + M2_Indirect_Avg_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Avg_Sales_Compliance__c</fullName>
        <formula>If(M2_Total_Avg_sales__c= 0,0,IF( AND( ISNULL(M2_Total_Net_Dollar__c) ,ISNULL(M2_Total_Avg_sales__c)) , 0,(M2_Total_Net_Dollar__c/M2_Total_Avg_sales__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Avg Sales Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Avg_sales__c</fullName>
        <formula>M2_Direct_Avg_Net_Dollar__c+M2_Indirect_Avg_Net_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Avg sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Compliance__c</fullName>
        <formula>If(Vision_Total_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M2_Total_Quantity__c ) ,ISNULL(Vision_Total_Awarded_Qty_Monthly__c)) , 0,(M2_Total_Quantity__c /Vision_Total_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Net_Dollar__c</fullName>
        <formula>M2_Direct_Net_Dollar__c + M2_Indirect_Net_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Total_Quantity__c</fullName>
        <formula>M2_Direct_Quantity__c  + M2_Indirect_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Total_Value_Compliance__c</fullName>
        <formula>If(Vision_Total_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M2_Total_Net_Dollar__c ) ,ISNULL(Vision_Total_Awarded_Value_Monthly__c)) , 0,(M2_Total_Net_Dollar__c /Vision_Total_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Total Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Avg_Net_Dollar__c</fullName>
        <formula>(IF(ISNULL(M6_Direct_Quantity__c),0,M6_Direct_Quantity__c)+IF(ISNULL(M5_Direct_Quantity__c),0,M5_Direct_Quantity__c) + IF(ISNULL(M4_Direct_Quantity__c),0,M4_Direct_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Avg Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Avg_Qty_Compliance__c</fullName>
        <formula>If(M3_Direct_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M3_Direct_Quantity__c) ,ISNULL(M3_Direct_Avg_Quantity__c)) , 0,(M3_Direct_Quantity__c/M3_Direct_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M6_Direct_Quantity__c),0,M6_Direct_Quantity__c)+IF(ISNULL(M5_Direct_Quantity__c),0,M5_Direct_Quantity__c) + IF(ISNULL(M4_Direct_Quantity__c),0,M4_Direct_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Avg_Value_Compliance__c</fullName>
        <formula>If(M3_Indirect_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M3_Indirect_Quantity__c) ,ISNULL(M3_Indirect_Avg_Quantity__c)) , 0,(M3_Indirect_Quantity__c/M3_Indirect_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Avg Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Compliance__c</fullName>
        <formula>If(Vision_Direct_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M3_Direct_Quantity__c) ,ISNULL(Vision_Direct_Awarded_Qty_Monthly__c)) , 0,(M3_Direct_Quantity__c/Vision_Direct_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Net_Dollar__c</fullName>
        <label>M3 Direct Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Quantity__c</fullName>
        <label>M3 Direct Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Direct_Value_Compliance__c</fullName>
        <formula>If(Vision_Direct_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M3_Direct_Net_Dollar__c) ,ISNULL(Vision_Direct_Awarded_Value_Monthly__c)) , 0,(M3_Direct_Net_Dollar__c/Vision_Direct_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Direct Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Avg_Net_Dollar__c</fullName>
        <formula>(IF(ISNULL(M6_Indirect_Quantity__c),0,M6_Indirect_Quantity__c)+IF(ISNULL(M5_Indirect_Quantity__c),0,M5_Indirect_Quantity__c) + IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Avg Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Avg_Qty_Compliance__c</fullName>
        <formula>If(M3_Indirect_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M3_Indirect_Quantity__c) ,ISNULL(M3_Indirect_Avg_Quantity__c)) , 0,(M3_Indirect_Quantity__c/M3_Indirect_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M6_Indirect_Quantity__c),0,M6_Indirect_Quantity__c)+IF(ISNULL(M5_Indirect_Quantity__c),0,M5_Indirect_Quantity__c) + IF(ISNULL(M4_Indirect_Quantity__c),0,M4_Indirect_Quantity__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Avg_Value_Compliance__c</fullName>
        <formula>If(M3_Indirect_Avg_Net_Dollar__c= 0,0,IF( AND( ISNULL(M3_Indirect_Net_Dollar__c) ,ISNULL(M3_Indirect_Avg_Net_Dollar__c)) , 0,(M3_Indirect_Net_Dollar__c/M3_Indirect_Avg_Net_Dollar__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Avg Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Compliance__c</fullName>
        <formula>If(Vision_Indirect_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M3_Indirect_Quantity__c) ,ISNULL(Vision_Indirect_Awarded_Qty_Monthly__c)) , 0,(M3_Indirect_Quantity__c/Vision_Indirect_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Net_Dollar__c</fullName>
        <label>M3 Indirect Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Quantity__c</fullName>
        <label>M3 Indirect Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Quantity_in_Units__c</fullName>
        <label>M3 Indirect Quantity in Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Indirect_Value_Compliance__c</fullName>
        <formula>If(Vision_Indirect_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M3_Indirect_Net_Dollar__c) ,ISNULL(Vision_Indirect_Awarded_Value_Monthly__c)) , 0,(M3_Indirect_Net_Dollar__c/Vision_Indirect_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Indirect Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Quantity_in_Units__c</fullName>
        <label>M3 Quantity in Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Avg_Qty_Compliance__c</fullName>
        <formula>If(M3_Total_Avg_Quantity__c= 0,0,IF( AND( ISNULL(M3_Total_Quantity__c) ,ISNULL(M3_Total_Avg_Quantity__c)) , 0,(M3_Total_Quantity__c/M3_Total_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Avg Qty Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Avg_Quantity__c</fullName>
        <formula>M3_Direct_Avg_Quantity__c + M3_Indirect_Avg_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Avg_Sales_Compliance__c</fullName>
        <formula>IF(AND(M3_Total_Net_Dollar__c&gt;0,M3_Total_Avg_Sales__c&gt;0) ,(M3_Total_Net_Dollar__c/ M3_Total_Avg_Sales__c)*100 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Avg Sales Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Avg_Sales__c</fullName>
        <formula>M3_Direct_Avg_Net_Dollar__c+M3_Indirect_Avg_Net_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Avg Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Compliance__c</fullName>
        <formula>If(Vision_Total_Awarded_Qty_Monthly__c= 0,0,IF( AND( ISNULL(M3_Total_Quantity__c ) ,ISNULL(Vision_Total_Awarded_Qty_Monthly__c)) , 0,(M3_Total_Quantity__c /Vision_Total_Awarded_Qty_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Net_Dollar__c</fullName>
        <formula>M3_Direct_Net_Dollar__c + M3_Indirect_Net_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Net Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_Total_Quantity__c</fullName>
        <formula>M3_Direct_Quantity__c + M3_Indirect_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3  Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Total_Value_Compliance__c</fullName>
        <formula>If(Vision_Total_Awarded_Value_Monthly__c= 0,0,IF( AND( ISNULL(M3_Total_Net_Dollar__c ) ,ISNULL(Vision_Total_Awarded_Value_Monthly__c)) , 0,(M3_Total_Net_Dollar__c /Vision_Total_Awarded_Value_Monthly__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Total Value Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month1__c</fullName>
        <label>Month1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month2__c</fullName>
        <label>Month2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month3__c</fullName>
        <label>Month3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <label>Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Rx_Compliance_Direct_Sales_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Accounting_Document__c</fullName>
        <label>Accounting Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Acct_Reference__c</fullName>
        <label>Acct Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Agreement_Description__c</fullName>
        <label>Agreement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>